--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,7 @@ build/
 .kotlin
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-.idea/gradle.xml
-.idea/misc.xml
-.idea/vcs.xml
+.idea
 *.iws
 *.iml
 *.ipr
